@@ -314,6 +314,7 @@ awstats_config_crontab()
     ECHO_DEBUG "Setting cronjob for awstats."
 
     cat >> ${CRON_SPOOL_DIR}/root <<EOF
+# ${PROG_NAME}: update Awstats statistics
 1   */1   *   *   *   perl ${AWSTATS_CGI_DIR}/awstats.pl -config=web -update >/dev/null
 1   */1   *   *   *   perl ${AWSTATS_CGI_DIR}/awstats.pl -config=smtp -update >/dev/null
 EOF
